--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="container">
         <div class="container__title">
             <div class="container__title--align">
-                <a href="/videoPage.html"
+                <a href="/flexbox_mack/videoPage.html"
                     class="container__title--link">
                     <h1 class="cutive-mono-regular">Veja <br>a rotina da<br> FCI</h1>
                 </a>
